fixed the extra space.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     bottom: -200px;
 } 
 
-#all{
+.container{
     height: 100vh;
 }
 
